testing/Travis/testcases/prototype/shouldFail/try2.adl
CONTEXT Test IN ENGLISH

PATTERN Test2
RELATION r[X*Y]
RELATION s[X*A]
RELATION t[B*Y]
RULE r = s;t
ENDPATTERN

ENDCONTEXT

{-
   Purpose: This script is a simply incorrect with = and ;
   Result: FAIL
   Reason: type error on ;
   Error message:

   line 7:11, file "try2.adl":
       Inside term  s;t,
       between the target of  s  and the source of  t,
       concepts A and B are in conflict.
-}